Changed back indentation from 2 to 4 characters (as in all other stream modules).